@@ -10,29 +10,30 @@ import org.teamSmurfs.backend.api.specialization.model.Specialization;
 import org.teamSmurfs.backend.api.specialization.repository.SpecializationRepository;
 import org.teamSmurfs.backend.api.specialization.service.SpecializationService;
 import org.teamSmurfs.backend.api.user.model.User;
-import org.teamSmurfs.backend.api.user.repository.StaffRepository;
-import org.teamSmurfs.backend.api.user.repository.UserRepository;
+import org.teamSmurfs.backend.api.user.repository.UserRepository; // Ensure this repository exists
 import org.teamSmurfs.backend.config.exception.EntityNotFoundException;
 import org.teamSmurfs.backend.config.utils.EntityUtil;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @AllArgsConstructor
 @Service
 public class SpecializationServiceImpl implements SpecializationService {
 
     private final SpecializationRepository repository;
-    private final UserRepository userRepository;
-    private final StaffRepository staffRepository;
+    private final UserRepository userRepository; // Added UserRepository to fetch staff names
     private final ModelMapper modelMapper;
 
     @Override
     public void create(final CreateSpecializationRequest createSpecializationRequest) {
-        checkUserExists(createSpecializationRequest.getStaffId());
+        // Create specialization entities using provided names and staffId
         List<Specialization> specializations = Arrays.stream(createSpecializationRequest.getNames())
                 .map(name -> new Specialization(name, createSpecializationRequest.getStaffId()))
-                .toList();
+                .collect(Collectors.toList());
+
+        // Save specialization entities in the repository
         this.repository.saveAll(specializations);
     }
 
@@ -40,7 +41,7 @@ public class SpecializationServiceImpl implements SpecializationService {
     public List<SpecializationDto> retrieveAll() {
         return repository.findAll().stream()
                 .map(this::mapToDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -50,14 +51,19 @@ public class SpecializationServiceImpl implements SpecializationService {
 
     @Override
     public SpecializationDto update(final Long id, final UpdateSpecializationRequest updateSpecializationRequest) {
+        // Retrieve specialization entity by id
         final Specialization specialization = EntityUtil.getEntityById(this.repository, id);
-        if (updateSpecializationRequest.getName() != null && !specialization.getName().equals(updateSpecializationRequest.getName())) {
+
+        // Update fields if necessary
+        if (updateSpecializationRequest.getName() != null) {
             specialization.setName(updateSpecializationRequest.getName());
         }
-        if (updateSpecializationRequest.getStaffId() != null && !specialization.getStaffId().equals(updateSpecializationRequest.getStaffId())) {
-            checkUserExists(updateSpecializationRequest.getStaffId());
+
+        if (updateSpecializationRequest.getStaffId() != null) {
             specialization.setStaffId(updateSpecializationRequest.getStaffId());
         }
+
+        // Save updated specialization
         return mapToDto(this.repository.save(specialization));
     }
 
@@ -66,16 +72,16 @@ public class SpecializationServiceImpl implements SpecializationService {
         EntityUtil.deleteEntity(this.repository, id, "Specialization");
     }
 
-    private void checkUserExists(final Long userId) {
-        User user = EntityUtil.getEntityById(this.userRepository, userId);
-        if (!this.staffRepository.existsByUserId(user.getId())) {
-            throw new EntityNotFoundException("Staff not found for User ID: " + user.getId());
-        }
-    }
-
     private SpecializationDto mapToDto(final Specialization specialization) {
         SpecializationDto specializationDto = modelMapper.map(specialization, SpecializationDto.class);
-        specializationDto.setStaffName(EntityUtil.getEntityById(this.userRepository, specialization.getStaffId()).getName());
+
+        // Map staffName from staffId by fetching the corresponding user entity
+        if (specialization.getStaffId() != null) {
+            User staff = userRepository.findById(specialization.getStaffId())
+                    .orElseThrow(() -> new EntityNotFoundException("Staff member not found for ID: " + specialization.getStaffId()));
+            specializationDto.setStaffName(staff.getName());
+        }
+
         return specializationDto;
     }
 }
